# credit-risk-scoring

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
configs/: config.yaml
data/sample/: german_credit_sample.csv
scripts/: generate_sample_data.py
src/: main.py
src/api/: app.py  schemas.py
src/dashboard/: __init__.py  app.py
src/data/: downloader.py  loader.py  preprocessor.py  validator.py  woe_transformer.py
src/explainability/: lime_explainer.py  pdp_generator.py  shap_explainer.py
src/fairness/: analyzer.py  mitigator.py  report_generator.py
src/models/: evaluator.py  registry.py  scorecard.py  trainer.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_api.py  test_bias_mitigation.py  test_ci_pipeline.py  test_config_and_logging.py  test_dashboard.py  test_data_pipeline.py  test_data_validation.py  test_docker.py  test_documentation.py  test_explainability.py  test_fairness.py  test_model_card.py  test_models.py  test_pdp_and_serialization.py  test_scorecard.py  test_woe_transformer.py
